--- a/Finsys/templates/app1/addcust.html
+++ b/Finsys/templates/app1/addcust.html
@@ -615,9 +615,17 @@
             openbal = $("#openbalance").val()
             if($('#bal').val()=='credit'){
                 if(openbal.slice(0,1) != '-'){
-                    document.getElementById("openbalance").value = "-"+openbal
+                    if(parseFloat(openbal) != 0){
+                        document.getElementById("openbalance").value = "-"+openbal
+                    }else{
+                        document.getElementById("openbalance").value = openbal
+                    }
                 }else{
-                    document.getElementById("openbalance").value = openbal
+                    if(parseFloat(openbal) != 0){
+                        document.getElementById("openbalance").value = openbal
+                    }else{
+                        document.getElementById("openbalance").value = -1 * parseFloat(openbal)
+                    }
                 }
             }else{
                 document.getElementById("openbalance").value = openbal
@@ -629,10 +637,14 @@
             if(openbal != ""){
                 if($('#bal').val()=='credit'){
                     openbal = $("#openbalance").val()
-                    document.getElementById("openbalance").value = "-"+openbal
+                    if (parseFloat(openbal) != 0){
+                        document.getElementById("openbalance").value = "-"+openbal
+                    }else{
+                        document.getElementById("openbalance").value = openbal
+                    }
                 }else{
                     openbal = $("#openbalance").val()
-                    document.getElementById("openbalance").value = openbal.slice(1,)
+                    document.getElementById("openbalance").value = -1*(parseFloat(openbal))
                 }
             }
         });
