--- a/Finsys/templates/app1/editcustomer.html
+++ b/Finsys/templates/app1/editcustomer.html
@@ -107,7 +107,7 @@
                             <label for="validationCustom05">Opening Balance</label>
                             <div class="d-flex">
                                 <select name="bal" id="bal" class="form-select text-white pl-1" style="background-color: #243e54; width: 25%; border-radius: 5px;">
-                                    {% if customer.opening_balance >= 0 %}
+                                    {% if customer.opening_balance > 0 %}
                                         <option value="debit" selected hidden>Debit</option>
                                     {% else %}
                                         <option value="credit" selected hidden>Credit</option>
@@ -115,7 +115,7 @@
                                     <option value="credit">Credit</option>
                                     <option value="debit">Debit</option>
                                 </select>
-                                <input type="text" class="form-control" id="openbalance"  name="openbalance" value="{{ customer.opening_balance}}"
+                                <input type="text" class="form-control" id="openbalance"  name="openbalance" value="{{customer.opening_balance}}"
                                         style="background-color: #2f516f;color: white;">
                                 <div class="text-danger m-2" ></div>
                             </div>
@@ -463,9 +463,17 @@
             openbal = $("#openbalance").val()
             if($('#bal').val()=='credit'){
                 if(openbal.slice(0,1) != '-'){
-                    document.getElementById("openbalance").value = "-"+openbal
+                    if(parseFloat(openbal) != 0){
+                        document.getElementById("openbalance").value = "-"+openbal
+                    }else{
+                        document.getElementById("openbalance").value = openbal
+                    }
                 }else{
-                    document.getElementById("openbalance").value = openbal
+                    if(parseFloat(openbal) != 0){
+                        document.getElementById("openbalance").value = openbal
+                    }else{
+                        document.getElementById("openbalance").value = -1 * parseFloat(openbal)
+                    }
                 }
             }else{
                 document.getElementById("openbalance").value = openbal
@@ -477,13 +485,24 @@
             if(openbal != ""){
                 if($('#bal').val()=='credit'){
                     openbal = $("#openbalance").val()
-                    document.getElementById("openbalance").value = "-"+openbal
+                    if (parseFloat(openbal) != 0){
+                        document.getElementById("openbalance").value = "-"+openbal
+                    }else{
+                        document.getElementById("openbalance").value = openbal
+                    }
                 }else{
                     openbal = $("#openbalance").val()
-                    document.getElementById("openbalance").value = openbal.slice(1,)
+                    document.getElementById("openbalance").value = -1*(parseFloat(openbal))
                 }
             }
         });
+    </script>
+
+    <script>
+       open_val =  document.getElementById('openbalance').value
+       if (parseInt(open_val) == 0){
+        document.getElementById('openbalance').value = parseFloat(open_val *-1)
+       }
     </script>
 
 {% endblock %}
