--- a/Finsys/templates/app1/edit_sales_order.html
+++ b/Finsys/templates/app1/edit_sales_order.html
@@ -3442,14 +3442,25 @@ $(document).on('change','#plosu',function()   {
                 data: $(this).serialize(),
                 csrfmiddlewaretoken: '{{ csrf_token }}',
 
-                success: function(data) {
+                success: function(response) {
+                    id_list = response.id_list
+                    title_list = response.title_list
+                    first_name = response.first_name
+                    last_name = response.last_name
                     var dropdown = $('#customer');
                     dropdown.empty();
-                dropdown.append(`<option selected hidden>Select Customer</option>`);
-                    $.each(data, function(key, value) {
-                        console.log(value)
-                        dropdown.append($('<option></option>').attr('value', key).text(value[1] + " " +value[2] + " "+ value[3]).val(value[0] + " " +value[2] + " "+ value[3]));
-                    });
+                    dropdown.append(`<option value='NIL' selected hidden>Select Customer</option>`);
+
+                    let select = document.getElementById("customer");
+                    for(let i=0; i<id_list.length;i++){
+                        // Create a new option element    
+                        let newOption = document.createElement("option");
+                        newOption.text = title_list[i] + ' ' + first_name[i] + ' ' + last_name[i];
+                        newOption.value = id_list[i] + ' ' + first_name[i] + ' ' + last_name[i]; // Set a value for the new option
+
+                        // Append the new option to the select field
+                        select.appendChild(newOption);
+                    }
                 },
                 error: function(xhr, status, error) {
                 console.error(xhr.responseText);
